# FABM-GPM

./: README.md
src/: CMakeLists.txt  abio_pel.F90  abio_pel_EH.F90  abio_sed.F90  abio_sed_EH.F90  common.F90  gpm_model_library.F90  mixotroph.F90  phytoplankton.F90  plankton.F90  version.F90.in  zooplankton.F90
testcases/: fabm-EH_AP_AS-GPM_P_Z.yaml  fabm-EH_AP_AS-GPM_P_Z_fixedSt.yaml  fabm-EH_AP_AS-GPM_P_Z_fixedSt_empChl.yaml  fabm-GPM_SMPZ_NPSi.yaml  fabm-gpm-MPPMZZ-NPSi.yaml  fabm_kerimoglu_etal_2020.yaml  plot_1D-EH-GPM.py  run_EH-GPM_tests.sh
